updated code from working repo

--- a/README.me
+++ b/README.me
@@ -5,7 +5,7 @@ The project is a mobile app developed with React Native.
 
 ## Installation
 
-Clone the repository, cd into directory, and use yarn install.
+Clone the repository, cd into directory 'mobile-flashcards', and use yarn install.
 
 ## Usage
 
